--- a/app/index.html
+++ b/app/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html lang="en" ng-app="chatApp" class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html lang="en" ng-app="chatApp" class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html lang="en" ng-app="chatApp" class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html lang="en" ng-app="chatApp" class="no-js"> <!--<![endif]-->
+<!--[if lt IE 7]>
+<html lang="en" ng-app="chatApp" class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>
+<html lang="en" ng-app="chatApp" class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>
+<html lang="en" ng-app="chatApp" class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!-->
+<html lang="en" ng-app="chatApp" class="no-js"> <!--<![endif]-->
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,36 +19,43 @@
   <link rel="stylesheet" href="app.css">
   <script src="bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>
 </head>
-<body>
-  <div class="container-fluid">
-    <ul class="nav nav-pills">
-      <li role="presentation" class="active"><a href="#/chat">Chat</a></li>
-      <li role="presentation"><a href="#">Profile</a></li>
-    </ul>
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <h3 class="panel-title">Ammazing Chat App</h3>
-      </div>
-      <div class="panel-body">
-        <div ng-view></div>
-      </div>
+<body ng-controller="ApplicationController">
+<a href="#/" ng-click="logout()">Logout</a>
+
+<div class="container-fluid">
+  <ul class="nav nav-pills">
+    <li role="presentation" class="active"><a href="#/">Welcome</a></li>
+    <li role="presentation"><a href="#/chat">Chat</a></li>
+    <li role="presentation"><a href="#/user/new">New user</a></li>
+    <li role="presentation"><a href="#">Profile</a></li>
+  </ul>
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h3 class="panel-title">Ammazing Chat App</h3>
+    </div>
+    <div class="panel-body">
+      <div ng-view></div>
     </div>
   </div>
+</div>
 
-  <!--[if lt IE 7]>
-      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-  <![endif]-->
-  <!-- In production use:
-  <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
-  -->
-  <script src="https://cdn.socket.io/socket.io-1.2.1.js"></script>
-  <script src="bower_components/angular/angular.js"></script>
-  <script src="bower_components/angular-route/angular-route.js"></script>
-  <script src="bower_components/angular-socket-io/socket.min.js"></script>
-  <script src="app.js"></script>
-  <script src="views/chat/chat.js"></script>
-  <script src="components/version/version.js"></script>
-  <script src="components/version/version-directive.js"></script>
-  <script src="components/version/interpolate-filter.js"></script>
+<!--[if lt IE 7]>
+<p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+<![endif]-->
+<!-- In production use:
+<script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
+-->
+
+<script src="bower_components/angular/angular.js"></script>
+<script src="bower_components/angular-route/angular-route.js"></script>
+<script src="bower_components/angular-messages/angular-messages.js"></script>
+<script src="bower_components/angular-socket-io/socket.min.js"></script>
+<script src="app.js"></script>
+<script src="views/chat/chat.js"></script>
+<script src="views/user/new.js"></script>
+<script src="views/user/login.js"></script>
+<script src="components/version/version.js"></script>
+<script src="components/version/version-directive.js"></script>
+<script src="components/version/interpolate-filter.js"></script>
 </body>
 </html>
