Broadcast messages for everyone who is listenning.

--- a/app/index.html
+++ b/app/index.html
@@ -37,8 +37,10 @@
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
   -->
+  <script src="https://cdn.socket.io/socket.io-1.2.1.js"></script>
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
+  <script src="bower_components/angular-socket-io/socket.min.js"></script>
   <script src="app.js"></script>
   <script src="views/chat/chat.js"></script>
   <script src="components/version/version.js"></script>
