added drag-drop func

--- a/app/index.html
+++ b/app/index.html
@@ -27,6 +27,7 @@
     <li role="presentation" class="active"><a href="#/">Welcome</a></li>
     <li role="presentation"><a href="#/chat">Chat</a></li>
     <li role="presentation"><a href="#/user/new">New user</a></li>
+    <li role="presentation"><a href="#/temp-chat">Temp view for chats</a></li>
     <li role="presentation"><a href="#">Profile</a></li>
   </ul>
   <div class="panel panel-default">
@@ -45,13 +46,17 @@
 <!-- In production use:
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
 -->
+
+<script src="bower_components/jquery/dist/jquery.min.js"></script>
 <script src="https://cdn.socket.io/socket.io-1.2.1.js"></script>
 <script src="bower_components/angular/angular.js"></script>
 <script src="bower_components/angular-route/angular-route.js"></script>
 <script src="bower_components/angular-messages/angular-messages.js"></script>
 <script src="bower_components/angular-socket-io/socket.min.js"></script>
+<script src="bower_components/ngDraggable/ngDraggable.js"></script>
 <script src="app.js"></script>
 <script src="views/chat/chat.js"></script>
+<script src="views/temp-chat/chat.js"></script>
 <script src="views/user/new.js"></script>
 <script src="views/user/login.js"></script>
 <script src="components/version/version.js"></script>
