--- a/app/index.html
+++ b/app/index.html
@@ -45,7 +45,7 @@
 <!-- In production use:
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
 -->
-
+<script src="https://cdn.socket.io/socket.io-1.2.1.js"></script>
 <script src="bower_components/angular/angular.js"></script>
 <script src="bower_components/angular-route/angular-route.js"></script>
 <script src="bower_components/angular-messages/angular-messages.js"></script>
