--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,7 @@
   <script src="bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>
 </head>
 <body ng-controller="ApplicationController">
-<a href="#/" ng-click="logout()">Logout</a>
+<a class="chat-logout" href="#/" ng-click="logout()">Logout</a>
 
 <div class="container-fluid">
   <ul class="nav nav-pills">
