Create initial UserList functionality.

--- a/app/index.html
+++ b/app/index.html
@@ -51,6 +51,7 @@
 <script src="bower_components/angular-messages/angular-messages.js"></script>
 <script src="bower_components/angular-socket-io/socket.min.js"></script>
 <script src="app.js"></script>
+<script src="models/users/users.js"></script>
 <script src="views/chat/chat.js"></script>
 <script src="views/user/new.js"></script>
 <script src="views/user/login.js"></script>
